--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">hg</string>
+
+
     <string-array name="City">
         <item>City</item>
         <item>Ahmedabad</item>
@@ -13,4 +15,15 @@
 
 
     </string-array>
+    <string name="title_activity_profile">ProfileActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_chat">Chat</string>
+    <string name="title_account">Account</string>
+    <string name="title_setting">Setting</string>
+    <string name="title_activity_main4">Main4Activity</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
